--- a/index.html
+++ b/index.html
@@ -70,8 +70,12 @@
                 if (typeof initDashboardTaskStats === 'function') {
                     initDashboardTaskStats(user.uid);
                 }
+                if (typeof initDashboardWeeklyStats === 'function') {
+                    initDashboardWeeklyStats(user.uid);
+                }
             }
         });
+
 
         window.logout = () => {
             auth.signOut().then(() => {
@@ -152,45 +156,21 @@
                 </a>
 
 
-                <!-- PERFORMANCE -->
-                <a href="productivity.html" class="glass-panel tracker-card card-medium" style="text-decoration: none; color: inherit;">
-                    <div class="card-header">
-                        <div>
-                            <span class="card-title">Cognitive Output</span>
-                            <div class="card-value">6.8h</div>
-                            <span class="card-subtext">Mean Daily Deep Work</span>
-                        </div>
-                    </div>
-                    <div class="viz-container">
-                        <canvas id="productivity-dist-chart"></canvas>
-                    </div>
-                </a>
-
-                <!-- HEALTH -->
-                <a href="health.html" class="glass-panel tracker-card card-medium" style="text-decoration: none; color: inherit;">
-                    <div class="card-header">
-                        <div>
-                            <span class="card-title">Vitality Marker</span>
-                            <div class="card-value">92%</div>
-                            <span class="card-subtext">Biometric Recovery</span>
-                        </div>
-                    </div>
-                    <div class="viz-container">
-                        <canvas id="health-vitality-chart"></canvas>
-                    </div>
-                </a>
-
-                <!-- WEEKLY PLANNER -->
-                <a href="weekly-planner.html" class="glass-panel tracker-card card-full" style="text-decoration: none; color: inherit; background: linear-gradient(135deg, rgba(74, 222, 128, 0.1) 0%, rgba(34, 197, 94, 0.05) 100%);">
+                <!-- WEEKLY PLANNER with Graph -->
+                <a href="weekly-planner.html" class="glass-panel tracker-card card-full" style="text-decoration: none; color: inherit; background: linear-gradient(135deg, rgba(74, 222, 128, 0.08) 0%, rgba(34, 197, 94, 0.03) 100%);">
                     <div class="card-header">
                         <div>
                             <span class="card-title" style="color: #166534;">Weekly Planner</span>
-                            <div class="card-value" style="color: #22c55e;">7 Days</div>
-                            <span class="card-subtext">Plan Your Week Ahead</span>
+                            <div class="card-value" style="color: #22c55e;" id="weekly-completed-display">0 / 0</div>
+                            <span class="card-subtext">Tasks Completed This Week</span>
                         </div>
                         <span class="trend-badge" style="background: #dcfce7; color: #166534; border-color: rgba(34, 197, 94, 0.2);">📅 View</span>
                     </div>
+                    <div class="viz-container" style="height: 120px;">
+                        <canvas id="weekly-planner-chart"></canvas>
+                    </div>
                 </a>
+
             </div>
         </section>
 
