--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 </a>
 
                 <!-- TASK PLANNER -->
-                <a href="tasks.html" class="glass-panel tracker-card card-slim" style="text-decoration: none; color: inherit;">
+                <a href="tasks.html" class="glass-panel tracker-card card-medium" style="text-decoration: none; color: inherit;">
                     <div class="card-header">
                         <div>
                             <span class="card-title">Task Planner</span>
@@ -155,21 +155,21 @@
                     </div>
                 </a>
 
-
-                <!-- WEEKLY PLANNER with Graph -->
-                <a href="weekly-planner.html" class="glass-panel tracker-card card-full" style="text-decoration: none; color: inherit; background: linear-gradient(135deg, rgba(74, 222, 128, 0.08) 0%, rgba(34, 197, 94, 0.03) 100%);">
+                <!-- WEEKLY PLANNER -->
+                <a href="weekly-planner.html" class="glass-panel tracker-card card-medium" style="text-decoration: none; color: inherit; background: linear-gradient(135deg, rgba(74, 222, 128, 0.08) 0%, rgba(34, 197, 94, 0.03) 100%);">
                     <div class="card-header">
                         <div>
                             <span class="card-title" style="color: #166534;">Weekly Planner</span>
                             <div class="card-value" style="color: #22c55e;" id="weekly-completed-display">0 / 0</div>
-                            <span class="card-subtext">Tasks Completed This Week</span>
+                            <span class="card-subtext">Completed This Week</span>
                         </div>
-                        <span class="trend-badge" style="background: #dcfce7; color: #166534; border-color: rgba(34, 197, 94, 0.2);">📅 View</span>
+                        <span class="trend-badge" style="background: #dcfce7; color: #166534; border-color: rgba(34, 197, 94, 0.2);">📅</span>
                     </div>
-                    <div class="viz-container" style="height: 120px;">
+                    <div class="viz-container">
                         <canvas id="weekly-planner-chart"></canvas>
                     </div>
                 </a>
+
 
             </div>
         </section>
